added .gitignore file

--- a/Infants.html
+++ b/Infants.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Infants Program</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="../Infants/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
 
@@ -14,7 +14,7 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="../Home/index.html" id="logo">Starlight Academy</a>
+        <a href="./Home.html" id="logo">Starlight Academy</a>
         <!-- <li>
             <a href="#">Job Opportunities</a>
         </li> -->
@@ -30,7 +30,7 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
-            <a href="../Infants/Infants.html">Infants</a>
+            <a href="./Infants.html">Infants</a>
             <a href="#">Toddlers</a>
             <a href="#">Two Year Olds</a>
             <a href="#">Three Year Olds</a>
@@ -44,9 +44,9 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
-            <a href="../Our-Team/index.html">Our Team</a>
-            <a href="../Our-Curriculum/Curriculum.html">Curriculum</a>
-            <a href="../Our-Classroom/Classroom.html">Our Classroom</a>
+            <a href="./Team.html">Our Team</a>
+            <a href="./Curriculum.html">Curriculum</a>
+            <a href="./Classroom.html">Our Classroom</a>
             </div>
         </li>
     </ul>
