--- a/Classroom.html
+++ b/Classroom.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starlight Academy</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/classroom.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
 
@@ -14,7 +16,7 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="../Home/index.html" id="logo">Starlight Academy</a>
+        <a href="./Home.html" id="logo">Starlight Academy</a>
         <!-- <li>
             <a href="#">Job Opportunities</a>
         </li> -->
@@ -30,7 +32,7 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
-            <a href="../Infants/Infants.html">Infants</a>
+            <a href="./Infants.html">Infants</a>
             <a href="#">Toddlers</a>
             <a href="#">Two Year Olds</a>
             <a href="#">Three Year Olds</a>
@@ -44,70 +46,78 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
-            <a href="../Our-Team/index.html">Our Team</a>
-            <a href="../Our-Curriculum/Curriculum.html">Curriculum</a>
-            <a href="../Our-Classroom/Classroom.html">Our Classroom</a>
+            <a href="./Team.html">Our Team</a>
+            <a href="./Curriculum.html">Curriculum</a>
+            <a href="./Classroom.html">Our Classroom</a>
             </div>
         </li>
     </ul>
 
     <!--MAIN BODY AREA-->
     <h1 id="main-classroom-title">Our Classrooms</h1>
-    <div class="card-columns">
+    <!-- <div class="card-columns">
             <div class="card">
-              <img src="../images/Infant-Room.png" class="card-img-top" alt="Infant Room">
+              <img src="./assets/images/Infant-Room.png" class="card-img-top" alt="Infant Room">
               <div class="card-body">
                 <h5 class="card-title">Infant Room</h5>
               </div>
             </div>
             <div class="card">
-                <img src="../images/Two-Yr-Old-Room.png" class="card-img-top" alt="Two Year Old Room">
+                <img src="./assets/images/Two-Yr-Old-Room.png" class="card-img-top" alt="Two Year Old Room">
                 <div class="card-body">
                     <h5 class="card-title">Two Year Old Room</h5>
                 </div>
             </div>
             <div class="card">
-              <img src="../images/Three-Yr-Old-Room.png" class="card-img-top" alt="Three Year Old Room">
+              <img src="./assets/images/Three-Yr-Old-Room.png" class="card-img-top" alt="Three Year Old Room">
               <div class="card-body">
                 <h5 class="card-title">Three Year Old Room</h5>
               </div>
             </div>
             <div class="card">
-                <img src="../images/Three-Yr-Old-Room-2.png" class="card-img-top" alt="Three Year Old Room">
+                <img src="./assets/images/Three-Yr-Old-Room-2.png" class="card-img-top" alt="Three Year Old Room">
                 <div class="card-body">
                     <h5 class="card-title">Three Year Old Room</h5>
                 </div>
             </div>
             <div class="card">
-                <img src="../images/Four-yr-old-room.png" class="card-img-top" alt="Four Year Old Room">
+                <img src="./assets/images/Four-yr-old-room.png" class="card-img-top" alt="Four Year Old Room">
                 <div class="card-body">
                     <h5 class="card-title">Four Year Old Room</h5>
                 </div>
             </div>
             <div class="card">
-                <img src="../images/Five-Yr-Old-Room.png" class="card-img-top" alt="Five Year Old Room">
+                <img src="./assets/images/Five-Yr-Old-Room.png" class="card-img-top" alt="Five Year Old Room">
                 <div class="card-body">
                     <h5 class="card-title">Five Year Old Room</h5>
                 </div>
             </div>
             <div class="card">
-                <img src="../images/5-yr-old-rm.png" class="card-img-top" alt="Five Year Old Room">
+                <img src="./assets/images/5-yr-old-rm.png" class="card-img-top" alt="Five Year Old Room">
                     <div class="card-body">
                         <h5 class="card-title">Five Year Old Room</h5>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../images/Toddler-Room.png" class="card-img-top" alt="Toddler Room">
+                    <img src="./assets/images/Toddler-Room.png" class="card-img-top" alt="Toddler Room">
                     <div class="card-body">
                         <h5 class="card-title">Toddler Room</h5>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../images/Toddler-Room-2.png" class="card-img-top" alt="Toddler Room">
+                    <img src="./assets/images/Toddler-Room-2.png" class="card-img-top" alt="Toddler Room">
                     <div class="card-body">
                         <h5 class="card-title">Toddler Room</h5>
                     </div>
                 </div>
+          </div> -->
+          <div class="carousel">
+            <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+            <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+            <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+            <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+            <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
           </div>
+    <script type="text/javascript" src="js/materialize.min.js"></script>      
 </body>
 </html>
