--- a/Team.html
+++ b/Team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Our Team</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="../Our-Team/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
 
@@ -14,7 +14,7 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="../Home/index.html" id="logo">Starlight Academy</a>
+        <a href="./Home.html" id="logo">Starlight Academy</a>
         <!-- <li>
             <a href="#">Job Opportunities</a>
         </li> -->
@@ -30,7 +30,6 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
-            <a href="../Infants/Infants.html">Infants</a>
             <a href="#">Toddlers</a>
             <a href="#">Two Year Olds</a>
             <a href="#">Three Year Olds</a>
@@ -44,9 +43,9 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
-            <a href="../Our-Team/index.html">Our Team</a>
-            <a href="../Our-Curriculum/Curriculum.html">Curriculum</a>
-            <a href="../Our-Classroom/Classroom.html">Our Classroom</a>
+            <a href="./Team.html">Our Team</a>
+            <a href="./Curriculum.html">Curriculum</a>
+            <a href="./Classroom.html">Our Classroom</a>
             </div>
         </li>
 
@@ -56,7 +55,7 @@
     <div class="container">
         <h1 id="manage-team-title">Our Management Team</h1>
         <h3 id="center-dir-title">Beth Boedeker - Center Director</h3>
-        <img src="../images/beth.png" style="height: 200px; width: 200px;">
+        <img src="./assets/images/beth.png" style="height: 200px; width: 200px;">
         <p id="description-1">Beth Boedeker is the Center Director at Lullaby Inn in Saint Ann. Beth attended Ursuline Academy 
         and obtained her Bachelor’s degree in psychology from the University of Missouri-Columbia. She has extensive experience 
         in management and worked as an ISL Director for Community Alternatives of Missouri. This position required her to oversee 
