--- a/Classroom.html
+++ b/Classroom.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starlight Academy</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/classroom.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
 
@@ -17,19 +18,17 @@
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
         <a href="./Home.html" id="logo">Starlight Academy</a>
-        <!-- <li>
-            <a href="#">Job Opportunities</a>
-        </li> -->
-        <li>
+       
+        <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
         </li>
-        <li>
+        <li id="contact-us">
             <a href="#">Contact Us</a>
         </li>
-        <li>
+        <li id="testimonials">
             <a href="#">Testimonials</a>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id="program-dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
             <a href="./Infants.html">Infants</a>
@@ -40,10 +39,10 @@
             <a href="#">Pre-Kindergarten</a>
             <a href="#">School Transportation</a>
             <a href="#">Summer Camp</a>
-
             </div>
         </li>
-        <li class="dropdown">
+        
+        <li class="dropdown" id="about-dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
