--- a/Infants.html
+++ b/Infants.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Infants Program</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
@@ -15,10 +16,8 @@
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
         <a href="./Home.html" id="logo">Starlight Academy</a>
-        <!-- <li>
-            <a href="#">Job Opportunities</a>
-        </li> -->
-        <li id="tuition">
+       
+        <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
         </li>
         <li id="contact-us">
@@ -27,7 +26,7 @@
         <li id="testimonials">
             <a href="#">Testimonials</a>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id="program-dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
             <a href="./Infants.html">Infants</a>
@@ -41,7 +40,7 @@
 
             </div>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id="about-dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
