--- a/Curriculum.html
+++ b/Curriculum.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Our Curriculum</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
@@ -15,9 +16,7 @@
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
         <a href="./Home.html" id="logo">Starlight Academy</a>
-        <!-- <li>
-            <a href="#">Job Opportunities</a>
-        </li> -->
+      
         <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
         </li>
@@ -27,7 +26,7 @@
         <li id="testimonials">
             <a href="#">Testimonials</a>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id="program-dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
             <a href="./Infants.html">Infants</a>
@@ -41,7 +40,7 @@
             </div>
         </li>
         
-        <li class="dropdown">
+        <li class="dropdown" id="about-dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
@@ -58,8 +57,8 @@
         learning center is both developed and implemented by professionals. With certifications from the 
         Missouri Department of Health and Senior Services, we have the knowledge and credentials to provide 
         the best possible care and services.</p>
-        <h3 id="curriculum-goals">Curriculum Goals</h1>
-        <ul>
+        <h3 id="curriculum-goals">Curriculum Goals</h3>
+        <ul id=curriculum-list>
             <li>
                 Allow children to learn through hands-on experiences
             </li>
