--- a/Team.html
+++ b/Team.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Our Team</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Just+Me+Again+Down+Here|Patrick+Hand+SC|Quicksand|Sacramento" rel="stylesheet">
     <script src="main.js"></script>
@@ -27,9 +28,10 @@
         <li id="testimonials">
             <a href="#">Testimonials</a>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id="program-dropdown">
             <a href="javascript:void(0)" class="dropbtn">Programs</a>
             <div class="dropdown-content">
+            <a href="./Infants.html">Infants</a>
             <a href="#">Toddlers</a>
             <a href="#">Two Year Olds</a>
             <a href="#">Three Year Olds</a>
@@ -40,7 +42,7 @@
 
             </div>
         </li>
-        <li class="dropdown">
+        <li class="dropdown" id="about-dropdown">
             <a href="javascript:void(0)" class="dropbtn">About</a>
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
