changed all home.html routes to index.html routes

--- a/Team.html
+++ b/Team.html
@@ -15,7 +15,7 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="./Home.html" id="logo">Starlight Academy</a>
+        <a href="./index.html" id="logo">Starlight Academy</a>
         <!-- <li>
             <a href="#">Job Opportunities</a>
         </li> -->
