--- a/Curriculum.html
+++ b/Curriculum.html
@@ -15,7 +15,7 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="./Home.html" id="logo">Starlight Academy</a>
+        <a href="./index.html" id="logo">Starlight Academy</a>
       
         <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
