added logo & changed theme

--- a/Infants.html
+++ b/Infants.html
@@ -15,7 +15,9 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="./index.html" id="logo">Starlight Academy</a>
+        <!-- <a href="./index.html" id="logo">Starlight Academy</a> -->
+        <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -12px; margin-left: 40%;">
+
        
         <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
