--- a/Team.html
+++ b/Team.html
@@ -15,7 +15,9 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <a href="./index.html" id="logo">Starlight Academy</a>
+        <!-- <a href="./index.html" id="logo">Starlight Academy</a> -->
+        <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -12px; margin-left: 40%;">
+
         
         <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
@@ -45,7 +47,7 @@
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
             <a href="./Curriculum.html">Curriculum</a>
-            <a href="./Classroom.html">Our Classroom</a>
+            <a href="#">Our Classroom</a>
             </div>
         </li>
 
