--- a/Infants.html
+++ b/Infants.html
@@ -19,8 +19,8 @@
         <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -12px; margin-left: 40%;">
 
        
-        <li id="pay-tuition">
-            <a href="#">Pay Tuition</a>
+        <!-- <li id="pay-tuition">
+            <a href="#">Pay Tuition</a> -->
         </li>
         <li id="contact-us">
             <a href="#">Contact Us</a>
@@ -49,6 +49,9 @@
             <a href="./Curriculum.html">Curriculum</a>
             <a href="./Classroom.html">Our Classroom</a>
             </div>
+        </li>
+        <li id="home-button">
+            <a href="./index.html">Home</a>
         </li>
     </ul>
 
@@ -88,5 +91,9 @@
         you may have.</p>
     </div>  
     
+    <!--FOOTER-->
+    <div class="footer">
+        <p id="address">10451 International Plaza Drive, St. Ann, MO 63074 &nbsp; &nbsp;(314) 309-3369</p>
+    </div>
 </body>
 </html>
