--- a/Team.html
+++ b/Team.html
@@ -19,9 +19,9 @@
         <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -12px; margin-left: 40%;">
 
         
-        <li id="pay-tuition">
+        <!-- <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
-        </li>
+        </li> -->
         <li id="contact-us">
             <a href="#">Contact Us</a>
         </li>
@@ -50,6 +50,9 @@
             <a href="#">Our Classroom</a>
             </div>
         </li>
+        <li id="home-button">
+            <a href="./index.html">Home</a>
+        </li>
 
     </ul>
 
@@ -67,6 +70,9 @@
         continues to focus on finding new ways to utilize her creativity to benefit the company.</p>
     </div>
    
-    
+    <!--FOOTER-->
+    <div class="footer">
+        <p id="address">10451 International Plaza Drive, St. Ann, MO 63074 &nbsp; &nbsp;(314) 309-3369</p>
+    </div>
 </body>
 </html>
