--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
         <!-- <a href="./index.html" id="logo">Starlight Academy</a> -->
-        <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -12px; margin-left: 40%;">
+        <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -25px; margin-left: 40%;">
 
        
-        <li id="pay-tuition">
+        <!-- <li id="pay-tuition">
             <a href="#">Pay Tuition</a>
-        </li>
+        </li> -->
         <li id="contact-us">
             <a href="#">Contact Us</a>
         </li>
@@ -51,6 +51,9 @@
             <a href="#">Our Classroom</a>
             </div>
         </li>
+        <li id="home-button">
+            <a href="./index.html">Home</a>
+        </li>
     </ul>
 
     <!--MAIN BODY AREA-->
@@ -65,6 +68,11 @@
         If you believe our program is a fit for you and your family give us a call at 
         </p>
         <p id="phone-number">(314) 309-3369</p>
+    </div>
+
+    <!--FOOTER-->
+    <div class="footer">
+        <p id="address">10451 International Plaza Drive, St. Ann, MO 63074 &nbsp; &nbsp;(314) 309-3369</p>
     </div>
    
 
