added contact us page

--- a/Curriculum.html
+++ b/Curriculum.html
@@ -23,7 +23,7 @@
             <a href="#">Pay Tuition</a>
         </li> -->
         <li id="contact-us">
-            <a href="#">Contact Us</a>
+            <a href="./Contact.html">Contact Us</a>
         </li>
         <li id="testimonials">
             <a href="#">Testimonials</a>
@@ -37,7 +37,7 @@
             <a href="#">Three Year Olds</a>
             <a href="#">Four Year Olds</a>
             <a href="#">Pre-Kindergarten</a>
-            <a href="#">School Transportation</a>
+            <a href="#">Transportation</a>
             <a href="#">Summer Camp</a>
             </div>
         </li>
